OP_SDWAN/davbest_integration/test_results/analysis_output.txt
  File "/app/OP_SDWAN/davbest_integration/davbest_sensor_analysis_rules.py", line 193
    ```
    ^
SyntaxError: invalid syntax
